<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="26dp">

        <LinearLayout
            android:id="@+id/relativ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="350dp"
                android:layout_height="220dp"
                app:srcCompat="@drawable/splash"
                android:contentDescription="@string/mainDescription"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativ"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/button"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/play"
            android:background="@drawable/btn_blue"
            android:textColor="@color/background"
            android:onClick="playGame"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/how_to_play"
            android:background="@drawable/btn_white"
            android:onClick="howToPlay"/>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:adjustViewBounds="true"
        android:background="@drawable/btn_exit"
        android:elevation="15dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/exit"
        android:contentDescription="@string/btnExit"
        android:onClick="exitGame"/>


</RelativeLayout>